<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature:</string>
    <string name="feel_likes">Feel likes:</string>
    <string name="temperature_min">Temperature min:</string>
    <string name="temperature_max">Temperature max:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="clouds">Clouds:</string>
    <string name="country">Country:</string>
    <string name="forecast_title">Forecast</string>
    <string name="weather">Weather:</string>
    <string name="day">Day:</string>


</resources>